fix spacing issue on alerts

--- a/src/sass/uswds/alert.scss
+++ b/src/sass/uswds/alert.scss
@@ -11,4 +11,7 @@
 
 .usa-alert-body {
   padding-left: 0;
+  p:first-child {
+    margin-top: 0;
+  }
 }
